# swarmctl

./: .gitignore  BUILD.md  Cargo.toml  Makefile  README.md
src/: main.rs
src/api/: client.rs  config.rs  context.rs  discovery.rs  docker_check.rs  failover.rs  migration.rs  mod.rs  network.rs  node.rs  port.rs  secret.rs  service.rs  stack.rs  swarm.rs  task.rs  volume.rs
src/cli/: api_resources.rs  apply.rs  attach.rs  cluster.rs  completion.rs  config.rs  context.rs  cordon.rs  cp.rs  create.rs  delete.rs  describe.rs  diff.rs  discover.rs  edit.rs  events.rs  exec.rs  explain.rs  failover.rs  get.rs  label.rs  logs.rs  mod.rs  node.rs  patch.rs  port_forward.rs  ports.rs  replace.rs  rollout.rs  root.rs  run.rs  scale.rs  service.rs  set.rs  stack.rs  swarm.rs  taint.rs  top.rs  vault.rs  volume.rs  (+1 more)
src/models/: config.rs  context.rs  failover.rs  mod.rs  network.rs  node.rs  port.rs  secret.rs  service.rs  stack.rs  task.rs  volume.rs
src/tui/: discover.rs  mod.rs
src/utils/: mod.rs  printer.rs  selectors.rs
src/vault/: crypto.rs  mod.rs  models.rs
